--- a/terms_of_use.html
+++ b/terms_of_use.html
@@ -151,6 +151,7 @@
         <div class="row">
           <div class="col-md-4">
             <span class="copyright">Copyright &copy; WheView</span>
+            <a href="contact.php">Contact Us</a>
           </div>
           <div class="col-md-4">
           </div>
